<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00897B"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:gravity="center"
            android:text="@string/game_over"
            android:textColor="#fff"
            android:textSize="50sp"
            android:fontFamily="@font/birdy_game"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginEnd="10dp"
                android:paddingTop="10sp"
                android:text="@string/_new"
                android:fontFamily="@font/the_distro"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10sp"
                android:text="@string/_0"
                android:fontFamily="@font/the_distro"
                android:textColor="#D50000"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingTop="10sp"
                android:text="@string/best"
                android:textSize="30sp"
                android:fontFamily="@font/the_distro"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/highScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="30sp"
                android:paddingTop="10sp"
                android:text="@string/_0"
                android:fontFamily="@font/the_distro"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="100">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/playContinue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15sp"
            android:layout_weight="25"
            android:background="@android:color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@android:color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_format_list_bulleted_black_24dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>