<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00897B"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:progress="10"
            android:progressBackgroundTint="#fff"
            android:progressTint="#00897B"
            android:max="10" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp">

            <ImageButton
                android:id="@+id/btnSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:tint="#fff"
                android:src="@drawable/ic_sound_on" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/btnSound"
                android:gravity="end"
                android:text="@string/_0"
                android:layout_centerVertical="true"
                android:fontFamily="@font/birdy_game"
                android:textColor="#fff"
                android:textSize="36sp" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mathematics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1  +  1"
                android:fontFamily="@font/the_distro"
                android:layout_marginBottom="20dp"
                android:textColor="#fff"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/result"
                android:fontFamily="@font/the_distro"
                android:textColor="#fff"
                android:textSize="100sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/trueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_checked"
            android:scaleType="fitCenter"
            android:tint="#FFD600"
            android:contentDescription="@string/app_name"
            android:background="#00000000"/>

        <ImageButton
            android:id="@+id/falseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_false"
            android:tint="#FF6D00"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            android:background="#00000000"/>

    </LinearLayout>

</LinearLayout>